--- a/Source/View/pt-BR.lproj/Lancamentos.storyboard
+++ b/Source/View/pt-BR.lproj/Lancamentos.storyboard
@@ -60,11 +60,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="mesCell" id="Omx-Zc-o9z" customClass="MesCell" customModule="Mensal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="mesCell" id="Omx-Zc-o9z" customClass="MesCell" customModule="Mensal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Omx-Zc-o9z" id="Mkp-NI-9Tq">
-                                    <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descrição extensa da despesa" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hKf-fP-ISG" userLabel="Descrição">
@@ -86,7 +86,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.000,00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5W5-eD-DXk" userLabel="Valor">
-                                            <rect key="frame" x="20" y="11.5" width="321" height="20.5"/>
+                                            <rect key="frame" x="20" y="11.5" width="339" height="20.5"/>
                                             <accessibility key="accessibilityConfiguration">
                                                 <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                             </accessibility>
@@ -102,7 +102,7 @@
                                         <constraint firstItem="5W5-eD-DXk" firstAttribute="centerY" secondItem="Mkp-NI-9Tq" secondAttribute="centerY" id="VEc-nO-lOm"/>
                                         <constraint firstItem="hKf-fP-ISG" firstAttribute="centerY" secondItem="Mkp-NI-9Tq" secondAttribute="centerY" id="Y1A-o7-48K"/>
                                         <constraint firstItem="85M-bs-D93" firstAttribute="centerY" secondItem="Mkp-NI-9Tq" secondAttribute="centerY" id="bCW-98-ZNy"/>
-                                        <constraint firstAttribute="trailing" secondItem="5W5-eD-DXk" secondAttribute="trailing" id="dhQ-m3-q7n"/>
+                                        <constraint firstAttribute="trailing" secondItem="5W5-eD-DXk" secondAttribute="trailing" constant="16" id="dhQ-m3-q7n"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hKf-fP-ISG" secondAttribute="trailing" constant="20" symbolic="YES" id="i9B-fl-qxf"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -113,7 +113,7 @@
                                     <outlet property="descricaoLabel" destination="hKf-fP-ISG" id="Nlt-Kr-JCW"/>
                                     <outlet property="diaLabel" destination="85M-bs-D93" id="Yx9-Zv-0Xq"/>
                                     <outlet property="valorLabel" destination="5W5-eD-DXk" id="wt8-Hw-yoU"/>
-                                    <segue destination="6jA-d3-68b" kind="show" identifier="mostraEdicao" id="IZb-vn-tnE"/>
+                                    <segue destination="jPl-PQ-ioh" kind="presentation" identifier="mostraEdicao" id="ZrN-aw-kJg"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -129,9 +129,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <segue destination="jPl-PQ-ioh" kind="presentation" identifier="mostraNovo" id="ssi-aJ-10S"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1hs-Wf-KJZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -210,7 +207,4 @@
             <point key="canvasLocation" x="1910" y="-334"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="IZb-vn-tnE"/>
-    </inferredMetricsTieBreakers>
 </document>
